0.3.11
- sql
    - tweak DISTINCT precedence for clauses like
      `func.count(t.c.col.distinct())`
    - Fixed detection of internal '$' characters in :bind$params [ticket:719]
- orm
    - added a check for joining from A->B using join(), along two
      different m2m tables.  this raises an error in 0.3 but is 
      possible in 0.4 when aliases are used. [ticket:687]
    - fixed small exception throw bug in Session.merge()
    - fixed bug where mapper, being linked to a join where one table had 
      no PK columns, would not detect that the joined table had no PK.
    - fixed bugs in determining proper sync clauses from custom inherit
      conditions [ticket:769]
- engine
    - fixed another occasional race condition which could occur
      when using pool with threadlocal setting
- mysql
    - fixed specification of YEAR columns when generating schema
- mssql
    - added support for TIME columns (simulated using DATETIME) [ticket:679]
    - added support for BIGINT, MONEY, SMALLMONEY, UNIQUEIDENTIFIER and 
      SQL_VARIANT [ticket:721]
    - index names are now quoted when dropping from reflected tables [ticket:684]
    - can now specify a DSN for PyODBC, using a URI like mssql:///?dsn=bob
- postgres
    - when reflecting tables from alternate schemas, the "default" placed upon
      the primary key, i.e. usually a sequence name, has the "schema" name
      unconditionally quoted, so that schema names which need quoting are fine.
      its slightly unnecessary for schema names which don't need quoting
      but not harmful.
      
0.3.10
- general
    - a new mutex that was added in 0.3.9 causes the pool_timeout
      feature to fail during a race condition; threads would 
      raise TimeoutError immediately with no delay if many threads 
      push the pool into overflow at the same time.  this issue has been
      fixed.
- sql
    - better quoting of identifiers when manipulating schemas
    - got connection-bound metadata to work with implicit execution