@@ -3,6 +3,8 @@
     - tweak DISTINCT precedence for clauses like
       `func.count(t.c.col.distinct())`
     - Fixed detection of internal '$' characters in :bind$params [ticket:719]
+    - [ticket:768] dont assume join criterion consists only of column objects
+    
 - orm
     - added a check for joining from A->B using join(), along two
       different m2m tables.  this raises an error in 0.3 but is 
